@@ -19,12 +19,12 @@
 /* User count in channel before filtering message types
  *   Integer
  *   (0: no filtering) */
-#define JOIN_THRESHOLD 0
-#define PART_THRESHOLD 0
-#define QUIT_THRESHOLD 0
-#define ACCOUNT_THRESHOLD 0
-#define AWAY_THRESHOLD 0
-#define CHGHOST_THRESHOLD 0
+#define FILTER_THRESHOLD_JOIN    0
+#define FILTER_THRESHOLD_PART    0
+#define FILTER_THRESHOLD_QUIT    0
+#define FILTER_THRESHOLD_ACCOUNT 0
+#define FILTER_THRESHOLD_AWAY    0
+#define FILTER_THRESHOLD_CHGHOST 0
 
 /* Message sent for PART and QUIT by default */
 #define DEFAULT_QUIT_MESG "rirc v" VERSION
