@@ -16,6 +16,7 @@ Summary of notable changes and features
     - add ACTION_BG define to config.def.h
 ### Fixes
  - fix incorrect INVITE message handling
+ - fix message filter thresholds
 
 ## [0.1.3]
 ### Features
